@@ -49,7 +49,9 @@
     <Compile Include="BaseLookupMethod.cs" />
     <Compile Include="BaseObject.cs" />
     <Compile Include="BaseAddMethodMethod.cs" />
+    <Compile Include="BaseDelegateMethod.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IBehavior.cs" />
     <Compile Include="IMethod.cs" />
     <Compile Include="IObject.cs" />
     <Compile Include="Machine.cs" />
