@@ -12,24 +12,6 @@
     <milliseconds>878</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="BaseAddMethodMethod.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>01/22/2009 19:21:26</timestamp>
-      <milliseconds>171</milliseconds>
-    </settings>
-    <timestamp>01/22/2009 18:41:57</timestamp>
-    <milliseconds>921</milliseconds>
-    <violations />
-  </sourcecode>
-  <sourcecode name="BaseLookupMethod.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>01/22/2009 19:21:26</timestamp>
-      <milliseconds>171</milliseconds>
-    </settings>
-    <timestamp>01/22/2009 19:02:41</timestamp>
-    <milliseconds>453</milliseconds>
-    <violations />
-  </sourcecode>
   <sourcecode name="GlobalSuppressions.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>01/22/2009 19:21:26</timestamp>
@@ -57,15 +39,6 @@
     <milliseconds>866</milliseconds>
     <violations />
   </sourcecode>
-  <sourcecode name="BaseBehavior.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>01/22/2009 19:21:26</timestamp>
-      <milliseconds>171</milliseconds>
-    </settings>
-    <timestamp>01/22/2009 19:21:59</timestamp>
-    <milliseconds>843</milliseconds>
-    <violations />
-  </sourcecode>
   <sourcecode name="BaseObject.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>01/22/2009 19:21:26</timestamp>
@@ -73,15 +46,6 @@
     </settings>
     <timestamp>01/22/2009 19:22:38</timestamp>
     <milliseconds>281</milliseconds>
-    <violations />
-  </sourcecode>
-  <sourcecode name="IBehavior.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
-    <settings>
-      <timestamp>01/22/2009 19:21:26</timestamp>
-      <milliseconds>171</milliseconds>
-    </settings>
-    <timestamp>01/22/2009 19:23:07</timestamp>
-    <milliseconds>218</milliseconds>
     <violations />
   </sourcecode>
   <sourcecode name="IObject.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
@@ -93,9 +57,6 @@
     <milliseconds>125</milliseconds>
     <violations />
   </sourcecode>
-  <project key="-1636439326">
-    <configuration>DEBUG;TRACE</configuration>
-  </project>
   <sourcecode name="Machine.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
     <settings>
       <timestamp>01/22/2009 19:21:26</timestamp>
@@ -103,6 +64,54 @@
     </settings>
     <timestamp>01/22/2009 19:23:30</timestamp>
     <milliseconds>578</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="BaseAddMethodMethod.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/22/2009 19:21:26</timestamp>
+      <milliseconds>171</milliseconds>
+    </settings>
+    <timestamp>01/23/2009 05:52:18</timestamp>
+    <milliseconds>468</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="BaseLookupMethod.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/22/2009 19:21:26</timestamp>
+      <milliseconds>171</milliseconds>
+    </settings>
+    <timestamp>01/23/2009 05:44:44</timestamp>
+    <milliseconds>140</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="IBehavior.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/22/2009 19:21:26</timestamp>
+      <milliseconds>171</milliseconds>
+    </settings>
+    <timestamp>01/23/2009 05:51:53</timestamp>
+    <milliseconds>312</milliseconds>
+    <violations />
+  </sourcecode>
+  <project key="-1636439326">
+    <configuration>DEBUG;TRACE</configuration>
+  </project>
+  <sourcecode name="BaseBehavior.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/22/2009 19:21:26</timestamp>
+      <milliseconds>171</milliseconds>
+    </settings>
+    <timestamp>01/23/2009 06:02:15</timestamp>
+    <milliseconds>31</milliseconds>
+    <violations />
+  </sourcecode>
+  <sourcecode name="BaseDelegateMethod.cs" parser="Microsoft.StyleCop.CSharp.CsParser">
+    <settings>
+      <timestamp>01/22/2009 19:21:26</timestamp>
+      <milliseconds>171</milliseconds>
+    </settings>
+    <timestamp>01/23/2009 06:01:56</timestamp>
+    <milliseconds>187</milliseconds>
     <violations />
   </sourcecode>
 </stylecopresultscache>
